# ccdr-explorer-api

./: .env.example  .gitignore  README.md  db_setup.py  docker-compose.yml  pyproject.toml  schema.md
.cursor/rules/: doctl.mdc  general.mdc
db/: db.py  schema.py
migrations/: 20250902_convert_embedding_array_to_vector.py  add_publication_metadata.py  aggregate_positional_data.py  create_readonly_role.py  delete_document_content.py  drop_node_type.py  recreate_nodes.py  remove_citation.py  rename_publication_metadata_column.py  upload_to_prod.py
services/: semantic_search.py
tests/: test_citation.py  test_contentdata_validation.py  test_publication.py  test_render_context_html.py  test_to_html.py
utils/: ranges.py
